edit message api

--- a/ProjectAppManager/Base.lproj/Main.storyboard
+++ b/ProjectAppManager/Base.lproj/Main.storyboard
@@ -130,6 +130,9 @@
                                 <state key="normal" title="Cancel">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="cancelButtonOnClick:" destination="EHt-ea-UpU" eventType="touchUpInside" id="Qyq-yX-Tt0"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="EwS-ad-v8p">
                                 <rect key="frame" x="142" y="348" width="36" height="21"/>
