--- a/ProjectAppManager/Base.lproj/Main.storyboard
+++ b/ProjectAppManager/Base.lproj/Main.storyboard
@@ -99,32 +99,58 @@
             </objects>
             <point key="canvasLocation" x="605" y="104"/>
         </scene>
-        <!--Table View Controller-->
-        <scene sceneID="mrc-pV-bwn">
+        <!--Member List View Controller-->
+        <scene sceneID="4s6-AA-TCg">
             <objects>
-                <tableViewController id="dOu-Fp-aUf" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="YhS-Rw-zaE">
+                <viewController id="SV2-uG-wiz" customClass="MemberListViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="qde-nL-FGZ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="pfW-3Z-sjs">
+                                <rect key="frame" x="0.0" y="65" width="320" height="377"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="NJ8-jo-AQN">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NJ8-jo-AQN" id="bFy-eR-pwI">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Member List" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ve3-X3-Izu">
+                                <rect key="frame" x="78" y="20" width="165" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="memberListTableView" destination="pfW-3Z-sjs" id="QwF-W0-q9D"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0lD-fA-bB0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1024" y="108"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="NvQ-dL-s2r">
+            <objects>
+                <viewController id="N2j-E6-MJI" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Cqx-rq-287">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="9B5-PG-ouZ">
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9B5-PG-ouZ" id="bIT-B9-kug">
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="dOu-Fp-aUf" id="fRS-2J-ZPi"/>
-                            <outlet property="delegate" destination="dOu-Fp-aUf" id="vmX-of-Osm"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" id="y2r-2k-QaM"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="NGK-mB-C48" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cbx-4B-7C9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1046" y="92"/>
+            <point key="canvasLocation" x="1408" y="119"/>
         </scene>
         <!--Reminder View Controller-->
         <scene sceneID="fjz-Av-mFj">
@@ -236,7 +262,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5tf-mZ-tqZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1427" y="78"/>
+            <point key="canvasLocation" x="1741" y="119"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="rHU-iJ-bE4">
