--- a/ProjectAppManager/Base.lproj/Main.storyboard
+++ b/ProjectAppManager/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="FCc-0H-VDL">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A388b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="FCc-0H-VDL">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <scenes>
         <!--Login View Controller-->
@@ -47,6 +47,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="6vc-v7-iXu"/>
                     <connections>
                         <outlet property="passwordText" destination="0FN-r8-VGJ" id="1FL-kb-w6b"/>
                         <outlet property="userNameText" destination="IgR-qz-S6u" id="ZeJ-Kx-JiI"/>
@@ -194,8 +195,8 @@
         <!--Reminder View Controller-->
         <scene sceneID="fjz-Av-mFj">
             <objects>
-                <viewController storyboardIdentifier="reminder" id="EHt-ea-UpU" customClass="ReminderViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="ZUC-i5-xDh">
+                <viewController storyboardIdentifier="reminderView" id="EHt-ea-UpU" customClass="ReminderViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" restorationIdentifier="reminderView" id="ZUC-i5-xDh">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -314,7 +315,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="EHt-ea-UpU" kind="relationship" relationship="rootViewController" id="66q-ic-Oly"/>
+                        <segue destination="hCC-iB-Ayk" kind="relationship" relationship="rootViewController" id="hu6-5T-bAt"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="siH-3w-51Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
