--- a/ProjectAppManager/Base.lproj/Main.storyboard
+++ b/ProjectAppManager/Base.lproj/Main.storyboard
@@ -20,6 +20,7 @@
                                 </state>
                                 <connections>
                                     <action selector="refreshBtnOnclick:" destination="hCC-iB-Ayk" eventType="touchUpInside" id="isb-gT-9sm"/>
+                                    <action selector="save:" destination="hCC-iB-Ayk" eventType="touchUpInside" id="U7L-Jb-W7f"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" minimumFontSize="17" id="IgR-qz-S6u">
@@ -197,7 +198,7 @@
             <objects>
                 <viewController storyboardIdentifier="reminderView" id="EHt-ea-UpU" customClass="ReminderViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" restorationIdentifier="reminderView" id="ZUC-i5-xDh">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reminder Info" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="5RO-0d-U0l">
@@ -251,7 +252,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" id="Wro-bk-fvi">
-                                <rect key="frame" x="21" y="263" width="333" height="162"/>
+                                <rect key="frame" x="21" y="263" width="388" height="162"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <date key="date" timeIntervalSinceReferenceDate="435606351.403548">
                                     <!--2014-10-21 17:45:51 +0000-->
